Updating queryables definition to the latest evolution, using JSON schema
